--- a/package.json
+++ b/package.json
@@ -3,26 +3,22 @@
   "sideEffects": false,
   "scripts": {
     "build": "remix build",
-    "dev:remix": "remix watch",
-    "dev:wrangler": "cross-env NODE_ENV=development npm run wrangler",
-    "dev": "npm-run-all build --parallel \"dev:*\"",
-    "start": "cross-env NODE_ENV=production npm run wrangler",
+    "dev": "remix dev",
     "typecheck": "tsc",
-    "wrangler": "wrangler pages dev ./public",
     "generateTypes": "npx supabase gen types typescript --local > app/database.types.ts"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
-    "@remix-run/cloudflare": "^1.14.2",
-    "@remix-run/cloudflare-pages": "^1.14.2",
-    "@remix-run/react": "^1.14.2",
+    "@remix-run/node": "^1.14.3",
+    "@remix-run/react": "^1.14.3",
+    "@remix-run/vercel": "^1.14.3",
     "@supabase/auth-helpers-remix": "^0.1.5",
     "@supabase/supabase-js": "^2.10.0",
-    "cross-env": "^7.0.3",
+    "@vercel/node": "^2.6.2",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
-    "isbot": "^3.6.5",
+    "isbot": "latest",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -30,17 +26,14 @@
     "timeago.js": "^4.0.2"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^3.18.0",
-    "@remix-run/dev": "^1.14.2",
-    "@remix-run/eslint-config": "^1.14.2",
-    "@types/lodash": "^4.14.191",
+    "@remix-run/dev": "^1.14.3",
+    "@remix-run/eslint-config": "^1.14.3",
+    "@remix-run/serve": "^1.14.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "eslint": "^8.27.0",
-    "npm-run-all": "^4.1.5",
-    "tailwindcss": "^3.2.7",
     "typescript": "^4.8.4",
-    "wrangler": "^2.2.1"
+    "tailwindcss": "^3.2.7"
   },
   "engines": {
     "node": ">=16.13"
