--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "eslint": "^8.27.0",
-    "typescript": "^4.8.4",
-    "tailwindcss": "^3.2.7"
+    "prisma": "^4.11.0",
+    "tailwindcss": "^3.2.7",
+    "typescript": "^4.8.4"
   },
   "engines": {
     "node": ">=16.13"
