added qs; now we can filter by username; url params now using qs stringify;

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.0.3",
     "isbot": "latest",
     "lodash": "^4.17.21",
+    "qs": "^6.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.1.4",
@@ -36,6 +37,7 @@
     "@remix-run/eslint-config": "^1.14.3",
     "@remix-run/serve": "^1.14.3",
     "@types/lodash": "^4.14.191",
+    "@types/qs": "^6.9.7",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "@types/react-paginate": "^7.1.1",
