Prepare for model detail modal

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "isbot": "latest",
+    "jotai": "^2.0.3",
     "lodash": "^4.17.21",
     "qs": "^6.11.1",
     "react": "^18.2.0",
