--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "sideEffects": false,
   "scripts": {
     "build": "remix build",
-    "dev": "remix dev",
+    "dev": "npx prisma generate && remix dev",
     "typecheck": "tsc",
     "generateTypes": "npx prisma generate"
   },
