added tags seeder; new tags service;  refactored edit model page; new MultiSelect Component

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.1.4",
+    "react-select": "^5.7.2",
     "supabase": "^1.42.7",
     "timeago.js": "^4.0.2",
     "zod": "^3.21.4"
