--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@supabase/auth-helpers-remix": "^0.1.5",
     "@supabase/supabase-js": "^2.10.0",
     "@vercel/node": "^2.6.2",
+    "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "isbot": "latest",
