--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-paginate": "^8.1.4",
     "react-select": "^5.7.2",
     "supabase": "^1.42.7",
+    "tailwind-merge": "^1.11.0",
     "timeago.js": "^4.0.2",
     "zod": "^3.21.4"
   },
