--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "typecheck": "tsc",
     "generateTypes": "npx prisma generate"
   },
+  "postinstall": "npm run generateTypes",
   "prisma": {
     "seed": "node --require esbuild-register prisma/seed.ts"
   },
