--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "@heroicons/react": "^2.0.16",
     "@mui/base": "^5.0.0-alpha.121",
     "@prisma/client": "^4.12.0",
-    "@remix-run/node": "^1.14.3",
-    "@remix-run/react": "^1.14.3",
-    "@remix-run/vercel": "^1.14.3",
+    "@remix-run/node": "1.15.x",
+    "@remix-run/react": "1.15.x",
+    "@remix-run/vercel": "1.15.x",
     "@supabase/auth-helpers-remix": "^0.1.5",
     "@supabase/supabase-js": "^2.10.0",
     "@vercel/analytics": "^0.1.11",
@@ -41,9 +41,9 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.14.3",
-    "@remix-run/eslint-config": "^1.14.3",
-    "@remix-run/serve": "^1.14.3",
+    "@remix-run/dev": "1.15.x",
+    "@remix-run/eslint-config": "1.15.x",
+    "@remix-run/serve": "1.15.x",
     "@types/lodash": "^4.14.191",
     "@types/qs": "^6.9.7",
     "@types/react": "^18.0.25",
