--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
-SUPABASE_URL=get_this
-SUPABASE_ANON_KEY=get_this
-DATABASE_URL=get_this
+SUPABASE_URL=get_this # from Supabase
+SUPABASE_ANON_KEY=get_this # from Supabase
+SERVICE_ROLE_KEY=user_for_admin_scripts # from Supabase
+DATABASE_URL=get_this # from Supabase
+DIRECT_URL=get_this # from Supabase
+
 ORIGIN=http://localhost:3000
+ROOT_URL=http://localhost:3000/
