updated readme and .env example

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,12 @@
+# REPLACE WITH YOUR INFO
 SUPABASE_URL=get_this # from Supabase
 SUPABASE_ANON_KEY=get_this # from Supabase
-SERVICE_ROLE_KEY=user_for_admin_scripts # from Supabase
 DATABASE_URL=get_this # from Supabase
-DIRECT_URL=get_this # from Supabase
+DIRECT_URL=get_this # from Supabase; necessary for pooling
 
+# OPTIONALS
+SERVICE_ROLE_KEY=user_for_admin_scripts # from Supabase
+
+# DEFAULT VALUES. CHANGE IF NECCESARY
 ORIGIN=http://localhost:3000
 ROOT_URL=http://localhost:3000/
