--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "qs": "^6.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-image-file-resizer": "^0.4.8",
     "react-paginate": "^8.1.4",
     "react-popper": "^2.3.0",
